# flops-profiler

./: .flake8  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: coverage.yml  release.yml  test_pypi.yml  tests.yml
docs/: build-api-docs.sh  conf.py  index.rst  requirements.txt
examples/: bert.py  classification.py  gpt2.py  requirements.txt  t5.py  utils.py  vision.py
flops_profiler/: __init__.py  __version__.py  profiler.py
pytorch_profiler/: __init__.py  profile.py
tests/: lenet5.py  test_get_model_profile.py  test_multi_devices.py  test_profiler.py
